@@ -5,7 +5,7 @@
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
 
-     Last generated: 13-03-2004  13:41:27 UTC
+     Last generated: 11-06-2004  12:26:08 UTC
 -----------------------------------------------------------------------------
 -->
 <PROJECT>
@@ -25,6 +25,7 @@
       ..\..\lib\c5\obj\JvFormMagnet.obj
       ..\..\lib\c5\obj\JvFormTransparent.obj
       ..\..\lib\c5\obj\JvFormWallpaper.obj
+      ..\..\lib\c5\obj\JvEmbeddedForms.obj
     "/>
     <RESFILES value="JvAppFrmC5R.res"/>
     <IDLFILES value=""/>
