@@ -4,7 +4,7 @@
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
             
-     Last generated: 13-03-2004  13:41:28 UTC     
+     Last generated: 11-06-2004  12:26:10 UTC     
 -----------------------------------------------------------------------------
 */
 
@@ -22,6 +22,7 @@ USEUNIT("..\..\run\JvFormAutoSize.pas");
 USEUNIT("..\..\run\JvFormMagnet.pas");
 USEUNIT("..\..\run\JvFormTransparent.pas");
 USEUNIT("..\..\run\JvFormWallpaper.pas");
+USEUNIT("..\..\run\JvEmbeddedForms.pas");
 USEPACKAGE("JvCoreC5R.bpi");
 USEPACKAGE("JvSystemC5R.bpi");
 USEPACKAGE("JvStdCtrlsC5R.bpi");
