@@ -4,7 +4,7 @@ package JvAppFrmD5R;
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
 
-     Last generated: 01-02-2004  09:03:45 UTC
+     Last generated: 11-06-2004  12:26:17 UTC
 -----------------------------------------------------------------------------
 }
 
@@ -53,7 +53,8 @@ contains
   JvFormAutoSize in '..\..\run\JvFormAutoSize.pas' ,
   JvFormMagnet in '..\..\run\JvFormMagnet.pas' ,
   JvFormTransparent in '..\..\run\JvFormTransparent.pas' ,
-  JvFormWallpaper in '..\..\run\JvFormWallpaper.pas' 
+  JvFormWallpaper in '..\..\run\JvFormWallpaper.pas' ,
+  JvEmbeddedForms in '..\..\run\JvEmbeddedForms.pas' 
   ;
 
 end.
