@@ -4,7 +4,7 @@ package JvQAppFrmD7R;
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
 
-     Last generated: 20-05-2004  12:14:47 UTC
+     Last generated: 11-06-2004  12:26:25 UTC
 -----------------------------------------------------------------------------
 }
 
@@ -47,7 +47,8 @@ contains
   JvQFormAnimatedIcon in '..\..\qrun\JvQFormAnimatedIcon.pas' ,
   JvQFormAnimation in '..\..\qrun\JvQFormAnimation.pas' ,
   JvQFormAutoSize in '..\..\qrun\JvQFormAutoSize.pas' ,
-  JvQFormWallpaper in '..\..\qrun\JvQFormWallpaper.pas' 
+  JvQFormWallpaper in '..\..\qrun\JvQFormWallpaper.pas' ,
+  JvQEmbeddedForms in '..\..\qrun\JvQEmbeddedForms.pas' 
   ;
 
 end.
