@@ -4,7 +4,7 @@ package JvQAppFrmK3R;
      DO NOT EDIT THIS FILE, IT IS GENERATED BY THE PACKAGE GENERATOR
             ALWAYS EDIT THE RELATED XML FILE (JvAppFrm-R.xml)
 
-     Last generated: 03-05-2004  17:35:31 UTC
+     Last generated: 11-06-2004  12:26:27 UTC
 -----------------------------------------------------------------------------
 }
 
@@ -48,7 +48,8 @@ contains
   JvQFormAnimatedIcon in '../../qrun/JvQFormAnimatedIcon.pas' ,
   JvQFormAnimation in '../../qrun/JvQFormAnimation.pas' ,
   JvQFormAutoSize in '../../qrun/JvQFormAutoSize.pas' ,
-  JvQFormWallpaper in '../../qrun/JvQFormWallpaper.pas' 
+  JvQFormWallpaper in '../../qrun/JvQFormWallpaper.pas' ,
+  JvQEmbeddedForms in '../../qrun/JvQEmbeddedForms.pas' 
   ;
 
 end.
